Also see Moose::Manual::Delta for more details of, and workarounds
for, noteworthy changes.

    * replace two more eval { } calls with try { } (doy)

0.92 Tue, Sep 22, 2009
    * Moose::Util::TypeConstraints
      - added the match_on_type operator (Stevan)
        - added tests and docs for this (Stevan)

    * Moose::Meta::Class
      - Metaclass compat fixing should already happen recursively, there's no
        need to explicitly walk up the inheritance tree. (doy)

    * Moose::Meta::Attribute
      - Add tests for set_raw_value and get_raw_value. (nothingmuch)

0.91 Thu, Sep 17, 2009
    * Moose::Object
      - Don't import any functions, in order to avoid polluting our namespace
        with things that can look like methods (blessed, try, etc)
        (nothingmuch)

    * Moose::Meta::Method::Constructor
      - The generated code needs to called Scalar::Util::blessed by its
        fully-qualified name or else Perl can interpret the call to blessed as
        an indirect method call. This broke Search::GIN, which in turn broke
        KiokuDB. (nothingmuch)

0.90 Tue, Sep 15, 2009
    * Moose::Meta::Attribute::Native::Trait::Counter
    * Moose::Meta::Attribute::Native::Trait::String
      - For these two traits, an attribute which did not explicitly provide
        methods to handles magically ended up delegating *all* the helper
        methods. This has been removed. You must be explicit in your handles
        declaration for all Native Traits. (Dave Rolsky)

    * Moose::Object
      - DEMOLISHALL behavior has changed. If any DEMOLISH method dies, we make
        sure to rethrow its error message. However, we also localize $@ before
        this so that if all the DEMOLISH methods success, the value of $@ will
        be preserved. (nothingmuch and Dave Rolsky)
      - We now also localize $? during object destruction. (nothingmuch and
        Dave Rolsky)
      - The handling of DEMOLISH methods was broken for immutablized classes,